<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main_menu_layout"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context="c15390501.placerate.MainMenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="65dp" >

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_profile"
            android:layout_gravity="center_horizontal|center"
            android:onClick="viewProfile"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            android:layout_gravity="center_horizontal|center"
            android:onClick="add" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <Button
            android:id="@+id/viewSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_saved_locations"
            android:layout_gravity="center_horizontal|center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center_horizontal|center"
            android:onClick="logout"/>
    </LinearLayout>

</LinearLayout>