<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="c15390501.placerate.LocationDetailsActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/type" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/address" />

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="350sp"
        android:layout_height="250sp"
        android:layout_gravity="center" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:src="@drawable/star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="@drawable/edit"/>

        <View
            android:layout_width="220sp"
            android:layout_height="match_parent"/>

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="@drawable/delete" />
    </LinearLayout>
</LinearLayout>
